syntax = "proto3";

package nameService;

service NameService {
  rpc getFormattedString (NamePayload) returns (FormattedPayload) {}
  rpc getFullName (NamePayload) returns (FullNameResponse) {}
}

message NamePayload {
  string firstName = 1;
  string middleName = 2;
  string lastName = 3;
}

message FormattedPayload {
  string formattedString = 1;
}

message FullNameResponse {
  string fullName = 1;
}